# OpenGL-Tests

./: .gitignore  Parcial2.tar.gz.txt  README.md
3D-master/: CMakeLists.txt  main.cpp  run.sh
ActividadMapeo/Ejercicio1/: CMakeLists.txt  listas.h  main.cpp
ActividadMapeo/Ejercicio2/: hello  main.cpp
ActividadMapeo/Ejercicio3/: CMakeLists.txt  main.cpp
ActividadMapeoPendiente/: CMakeLists.txt  main.cpp
CirculoLineas/: main.cpp
ColorAlpha/: main.cpp
Colores3D/: CMakeLists.txt  main.cpp
CoordenadasEsfericas/: hello  main.cpp
CuadranteLineas/: main.cpp
CubeTexture/: main.cpp
Cubo3D/: main.cpp
CuboTextura/: ejecutable  main.cpp
CurvaBezier/: CMakeLists.txt
CylinderTexture/: main.cpp
DibujoAvanzado/: dibujado.h  main.cpp
DibujoAvanzado/Ejercicio 1/: main.cpp
DibujoAvanzado/Ejercicio 3/: CMakeLists.txt  dibujado.h  main.cpp
DibujoAvanzado/Ejercicio 4/: main.cpp
DibujoAvanzado/Ejercicio 5/: CMakeLists.txt  main.cpp  points.h
Examen1/: main.cpp
FOGK/: main.cpp
FuncionLinea/: main.cpp
GLOrtho/: Metodo1.cpp
Guia 2/Ejercicio 1/: CMakeLists.txt  camera.h  dibujado.h  dibujos.h  main.cpp  objetos.h
Guia 2/Ejercicio 2/: CMakeLists.txt  dibujado.h  dibujos.h  main.cpp
Guia 2/Ejercicio 3/: CMakeLists.txt  arrays.h  dibujado.h  main.cpp
Guia 3/Ejercicio 2/: listas.h  main.cpp
GuiaEjercicios/: main.cpp
GuiaEjercios4/: CMakeLists.txt  exec  main.cpp  steve.h
LibSoil/: ejecutable  main.cpp
LineLoop/: main.cpp
Menu3D/: main.cpp
Nivel 1 - Fundamentos/: 0_linea_discontinua.cpp  10_alternar_formas.cpp  11_imprimir_dimensiones.cpp  12_deteccion_errores.cpp  13_impacto_viewport.cpp  14_animacion_triangulo.cpp  15_escena_combinada.cpp  16_simple_guy.cpp  17_zbuffer.cpp  1_triangulo_color.cpp  2_mover_triangulo.cpp  3_cuadrado.cpp  4_interactividad_basica.cpp  5_rangos_coordenadas.cpp  6_proyeccion_personalizada.cpp  7_escala_proyeccion.cpp  8_indicador_visual.cpp  9_mover_triangulo_teclas.cpp  triangle.cpp  utils.h
Nivel 2 - Transformaciones/: 1.1_cubo_rotando.cpp  1.2_rotacion_polar.cpp  10_cilindro.cpp  11_zbuffer.cpp  12_multiples_objetos.cpp  13_escena_animada.cpp  1_transladar_cubo.cpp  2_rotar_cubo_2ejes.cpp  3_escala_cubo.cpp  4_dos_cubos.cpp  5_jearquia_cubos_v2.cpp  5_jerarquia_cubos.cpp  6_camara.cpp  7_camara_interactiva.cpp  8_esfera.cpp  9_cubo_wireframe.cpp  Notas.txt
Nivel 2.5 - Estructura Proyecto/esfera_estructurada/: README.ENG.md  README.md  camera.cpp  camera.h  main.cpp  makefile  math.cpp  math.h  scene.cpp  scene.h  sphere.cpp  sphere.h
Nivel 2.5 - Estructura Proyecto/esfera_estructurada/docs/: camera.cpp  camera.h  chat.txt  math_utils.h  sphere.cpp
Nivel 2.5 - Estructura Proyecto/esfera_iluminada/: escena.cpp  makefile  multiples_esferas.cpp
Nivel 2.5 - Estructura Proyecto/esfera_rebotando/: makefile  multiples_esferas.cpp  sphere.cpp  sphere.h
Nivel 3 - Iluminación/: 0.1_plano_normales.cpp  0_esfera_iluminada.cpp
OldFiles/ActividadMapeo/Ejercicio2/Old/: listas.h  main.cpp
OldFiles/ActividadMapeo/Ejercicio3/: hello
OldFiles/CMakeGL/: main.cpp
OldFiles/CameraProyection/: main.cpp
OldFiles/CirculoPuntos/: main.cpp
OldFiles/Colores3D/: dibujado.h
OldFiles/ControlCamera/: hello  main.cpp
OldFiles/CuadrantePuntos/: main.cpp
OldFiles/CubeTexture/: exec
OldFiles/CurvaBezier/: main.cpp
OldFiles/CylinderTexture/: hello
OldFiles/DibujoAvanzado/Ejercicio 2/: CMakeLists.txt  dibujado.h  main.cpp
OldFiles/DibujoAvanzado/Ejercicio 4/: arrays.h  main.cpp
OldFiles/Esfera3D/: main.cpp
OldFiles/EstrellaTrian/: main.cpp
OldFiles/GLOrtho/: main.cpp
OldFiles/Guia 3/Ejercicio 2/: CMakeLists.txt
OldFiles/GuiaEjercicios/: CMakeLists.txt
OldFiles/GuiaEjercios4/: main.cpp
OldFiles/LineLoop/: CMakeLists.txt
OldFiles/MP3Sdl/: exec  main.cpp  main2.cpp
OldFiles/Navigate3D/: main.cpp
OldFiles/ObjLoader/: main.cpp
OldFiles/Parcial2/: objetos.h
OldFiles/Primitiva 3D/: main.cpp
OldFiles/Quads/: main.cpp
OldFiles/Rombo/: main.cpp
OldFiles/SoundSDL/: CMakeLists.txt
OldFiles/TeteraColor/: main.cpp
OldFiles/UltimaTarea/Nivel2/: CMakeLists.txt  main.cpp
OldFiles/movimientoPelota/: CMakeLists.txt  main.cpp
OpenGLTest/: OpenGLTest.cpp
Parcial2/: dibujado.h  main.cpp
Perspective/: CMakeLists.txt
Poligono/: main.cpp
PosicionSegunMouse/: main.cpp
QuadStrip/: main.cpp
RayTracing/: main.cpp
RedBook/: e5-1_light.c  e5-2_light.c  e5-3_light.c
Rotacion/: rotacion.cpp
SoundControllable/: main.cpp
SoundSDL/: exec  main.cpp
TestGL/: CMakeLists.txt
TeteraText/: hello  main.cpp
TextoGlut/: hello  main.cpp
TextoGlut2/: hello
Textura Esferica/: main.cpp
Transparencia/: main.cpp
TriangleFan/: main.cpp
TriangleStrip/: main.cpp
Triangulo/: main.cpp
Troncomion/: CMakeLists.txt  main.cpp
UltimaTarea/Nivel2/: CMakeLists.txt  main.cpp
animacionBasica/: exec  main.cpp
displaylist/: main.cpp
reloj/: main.cpp
